[package]
name = "ferroscope"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "16 live interactive Rust demos in your terminal. Ownership, concurrency, async, macros, WASM and more — with quiz mode, step control, and rainbow Konami. No GC. No compromise."
license = "MIT"
readme = "README.md"
repository = "https://github.com/wesleyscholl/ferroscope"
keywords = ["tui", "visualization", "rust", "educational", "interactive"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "ferroscope"
path = "src/main.rs"

[dependencies]
ratatui       = "0.28"
crossterm     = { version = "0.27", features = ["event-stream"] }
rayon         = "1"
parking_lot   = "0.12"
sysinfo       = "0.31"
once_cell     = "1"
anyhow        = "1"
thiserror     = "1"
rand          = "0.8"

[dev-dependencies]
criterion     = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sort_bench"
harness = false

[[bench]]
name = "alloc_bench"
harness = false

[[bench]]
name = "iter_bench"
harness = false

[profile.release]
lto              = true
codegen-units    = 1
opt-level        = 3
strip            = "symbols"
panic            = "abort"
overflow-checks  = false
